# Sales-Chatbot

./: .env  .env.exampe  .env.example  Config.py  Dockerfile  README.md  app.py  app_test.py  bookstore_data.csv  compose.yml  index.html  langgraph.json  main.py  main_api.py  main_test.py  nodes.py  products.json  pyproject.toml  react.py  requirements.txt  sales_agent_graph  setup.py  state.py  test_app.py
.github/workflows/: python-app.yml
DataBase/: checkpoint.sqlite-shm  checkpoint.sqlite-wal
Dataset/: Books2.csv  chatbot.json  products.json  products2.json
assets/: salles_chat_bot.postman_collection.json
modules/: __init__.py  agents.py  ai_crew.py  crew.py  graph.py  nodes.py  process_respond.py  sales_crew.py  state.py
modules/agents/: data_retrieval.py  final_answer.py  manager.py  sales_consultant.py
modules/df_manager/: convert_json_to_df.py  df_manager.py
modules/graph_blocks/: graph.py  nodes.py  state.py
modules/helper/: __init__.py  convert_json_to_df.py  get_the_data_from_the_end_point.py
notebook/: 01_test.ipynb  02_test.ipynb  03_test.ipynb  04_old_code.ipynb  05_get_the_data_from_the_end_point.ipynb  06_final_answer_llm.ipynb  07_get_products_data_from_the_cleaned_df.ipynb  processed_products.csv  products.csv  products.json
notebooks/: 01_start.ipynb  02_sales_agent.ipynb  03_final_answer.ipynb  04_manager_agent.ipynb  05_parse_html.ipynb
prompts/: output_formatter_prompt.txt  sales_agent_prompt.txt
routes/: base_router.py  chat_route.py
sales_agent.egg-info/: PKG-INFO  SOURCES.txt
sales_chatbot/: __init__.py  main.py
sales_chatbot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/: __init__.py  graph.py
template/: cards.html  cards_template.txt  norm_card_template.txt  offer_card_template.txt
tests/: __init__.py  test_main.py
tools/: df_tools.py
(+45 files in other folders)
